deploy/k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: klsm-affiliate
spec:
  selector: { app: klsm-affiliate }
  ports:
    - { name: http, port: 80, targetPort: http }
